syntax = "proto3";
package messages;
import "google/protobuf/empty.proto";

message Range {
  uint32 begin = 1;
  uint32 end = 2;
}

message RangeSet {
  option deprecated = true;

  repeated Range ranges = 1;
}

message WorkerState {
  option deprecated = true;
  map<string, RangeSet> datasets = 1;
}

message DatasetRanges {
  option deprecated = true;

  string url = 1;
  repeated Range ranges = 2;
}

message BitString {
  bytes data = 1;
  uint64 size = 2;
}

// Worker -> Scheduler, Portal, Ping collector
message Ping {
  optional string worker_id = 1 [deprecated = true];
  repeated DatasetRanges stored_ranges = 4 [deprecated = true];
  bytes signature = 5 [deprecated = true];

  string version = 2;  // "1.0.0"
  optional uint64 stored_bytes = 3;
  string assignment_id = 6;  // "20241008T141245_242da92f7d6c"
  // Points to the chunks in this worker's assignment list referenced by `assignment_id`.
  BitString missing_chunks = 7;
}

message HttpHeader {
  option deprecated = true;

  string name = 1;
  string value = 2;
}

message AssignedChunk {
  option deprecated = true;

  string path = 1;  // "0000000000/0000808640-0000816499-b0486318"
  repeated uint32 filenames = 2;  // index in known_filenames array
}

message DatasetChunks {
  option deprecated = true;

  string dataset_id = 1;  // "s3://moonbeam-evm-1"
  string download_url = 3;  // "https://moonbeam-evm-1.sqd-datasets.io/"
  repeated AssignedChunk chunks = 4;
}

message WorkerAssignment {
  option deprecated = true;

  repeated DatasetChunks dataset_chunks = 1;
  repeated HttpHeader http_headers = 2;
  repeated string known_filenames = 3;  // "blocks.parquet"
}

// Scheduler -> Worker
message Pong {
  option deprecated = true;

  bytes ping_hash = 1;
  oneof status {
    google.protobuf.Empty unsupported_version = 3;
    string jailed = 6;
    WorkerAssignment active = 7;
  }
}

// Portal -> Worker
message Query {// Optional fields enforce serializing default values
  string query_id = 1;
  string dataset = 2;  // "czM6Ly9ldGhlcmV1bS1tYWlubmV0"
  string query = 3;  // 512 KB max
  // If present, these values should be used instead of from_block and to_block in the query contents
  optional Range block_range = 7;
  uint64 timestamp_ms = 8;
  bytes signature = 9;  // covers all the above fields + worker's peer ID
}

// Worker -> Portal
message QueryResult {
  string query_id = 1;
  oneof result {
    QueryOk ok = 2;
    QueryError err = 8;
  }
  optional uint32 retry_after_ms = 9;
}

message QueryOk {
  bytes data = 1;
  optional uint64 last_block = 3;
  QueryResultSummary summary = 4;
}

message QueryError {
  oneof err {
    string bad_request = 1;
    string not_found = 2;
    string server_error = 3;
    google.protobuf.Empty too_many_requests = 4;
    google.protobuf.Empty server_overloaded = 5;
    string timeout = 6;
  }
}

// Portal -> Logs collector
message QueryFinished {
  string worker_id = 2;
  string query_id = 3;

  uint32 total_time_ms = 4;
  oneof result {
    QueryResultSummary ok = 5;
    QueryError err = 11;
  }
}

// Logs collector -> Worker
message LogsRequest {
  uint64 from_timestamp_ms = 1;
  uint64 to_timestamp_ms = 2;
  optional string last_received_query_id = 3;  // query ID of the last collected query
}

// Worker -> Logs collector
message QueryLogs {
  repeated QueryExecuted queries_executed = 1;
  bool has_more = 2;
}

message QueryExecuted {
  string client_id = 1;
  Query query = 3;

  uint32 exec_time_ms = 6;
  uint64 timestamp_ms = 11;
  oneof result {
    QueryResultSummary ok = 7;
    QueryError err = 14;
  }
}

message QueryResultSummary {
  uint64 size = 1;
  bytes hash = 2;  // sha3_256
  optional bytes signature = 3;  // signs `query_id` and `hash`
}
